--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@
     main {
         height: 100vh;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat (2, 1fr);
         grid-template-rows: 1fr 1fr;
         grid-template-areas: 
         "box1 box2"
