--- a/style.scss
+++ b/style.scss
@@ -5,15 +5,16 @@
     main {
         height: 100vh;
         display: grid;
-        grid-template-columns: repeat (2, 1fr);
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
         grid-template-areas: 
-        "box1 box2"
-        "box3 box3";
+        "box1 box2 box5"
+        "box3 box2 box5"
+        "box4 box4 box4";
         .box1 {
             background: lightcoral;
             grid-area: box1;
-            justify-self: center;
+            // justify-self: center;
         }
         .box2 {
             background: lightskyblue;
@@ -22,6 +23,14 @@
         .box3 {
             background: lightgreen;
             grid-area: box3;
+        }
+        .box4 {
+            background: lightgrey;
+            grid-area: box4;
+        }
+        .box5 {
+            background: khaki;
+            grid-area: box5;
         }
     }
 }
